--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,9 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,14 +12,15 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "BUILD_PATH=../backend/public react-scripts build",    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,7 +46,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "json-server": "^0.17.0"
+    "@babel/core": "^7.19.6",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.0.0",
+    "css-loader": "^6.7.1",
+    "deep-freeze": "^0.0.1",
+    "json-server": "^0.17.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
-  "description": ""
 }
